@@ -46,6 +46,9 @@ import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
 import javafx.stage.Screen;
+import lombok.Getter;
+import lombok.Setter;
+import lombok.extern.java.Log;
 
 import java.io.InputStream;
 import java.nio.IntBuffer;
@@ -57,33 +60,33 @@ import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.logging.Logger;
 import java.util.stream.Stream;
 
 import static com.nextbreakpoint.nextfractal.core.common.Plugins.tryFindFactory;
 
+@Log
 public class JobsPane extends BorderPane {
-    private static Logger logger = Logger.getLogger(JobsPane.class.getName());
     private static final int PADDING = 8;
 
-    private Map<String, JobEntry> exportEntries = new HashMap<>();
+    private final Map<String, JobEntry> exportEntries = new HashMap<>();
     private final ExecutorService executor;
     private final ListView<Bitmap> listView;
+    private final Tile tile;
+    @Setter
     private JobsDelegate delegate;
-    private Tile tile;
 
     public JobsPane(Tile tile) {
         this.tile = tile;
 
         listView = new ListView<>();
         listView.setFixedCellSize(tile.tileSize().height() + PADDING);
-        listView.setCellFactory(view -> new JobsListCell(tile));
+        listView.setCellFactory(_ -> new JobsListCell(tile));
 
-        HBox exportControls = new HBox(0);
+        final HBox exportControls = new HBox(0);
         exportControls.setAlignment(Pos.CENTER);
-        Button suspendButton = new Button("", createIconImage("/icon-suspend.png", 0.015));
-        Button resumeButton = new Button("", createIconImage("/icon-resume.png", 0.015));
-        Button removeButton = new Button("", createIconImage("/icon-remove.png", 0.015));
+        final Button suspendButton = new Button("", createIconImage("/icon-suspend.png", 0.015));
+        final Button resumeButton = new Button("", createIconImage("/icon-resume.png", 0.015));
+        final Button removeButton = new Button("", createIconImage("/icon-remove.png", 0.015));
         suspendButton.setTooltip(new Tooltip("Suspend selected jobs"));
         resumeButton.setTooltip(new Tooltip("Resume selected jobs"));
         removeButton.setTooltip(new Tooltip("Remove selected jobs"));
@@ -95,18 +98,18 @@ public class JobsPane extends BorderPane {
         exportControls.getChildren().add(removeButton);
         exportControls.getStyleClass().add("toolbar");
 
-        Label sizeLabel = new Label();
-        Label formatLabel = new Label();
-        Label durationLabel = new Label();
+        final Label sizeLabel = new Label();
+        final Label formatLabel = new Label();
+        final Label durationLabel = new Label();
 
-        VBox detailsPane = new VBox(10);
+        final VBox detailsPane = new VBox(10);
         detailsPane.setAlignment(Pos.TOP_LEFT);
         detailsPane.getChildren().add(formatLabel);
         detailsPane.getChildren().add(sizeLabel);
         detailsPane.getChildren().add(durationLabel);
         detailsPane.getStyleClass().add("details");
 
-        BorderPane jobsPane = new BorderPane();
+        final BorderPane jobsPane = new BorderPane();
         jobsPane.setCenter(listView);
         jobsPane.setBottom(detailsPane);
 
@@ -115,7 +118,7 @@ public class JobsPane extends BorderPane {
 
         getStyleClass().add("jobs");
 
-        List<Button> buttonsList = Arrays.asList(suspendButton, resumeButton, removeButton);
+        final List<Button> buttonsList = Arrays.asList(suspendButton, resumeButton, removeButton);
         listView.getSelectionModel().getSelectedItems().addListener((ListChangeListener.Change<? extends Bitmap> c) -> updateButtons(buttonsList, c.getList().size() == 0));
 
         suspendButton.setOnAction(e -> selectedItems(listView).filter(bitmap -> !isExportSessionSuspended(bitmap))
@@ -133,9 +136,9 @@ public class JobsPane extends BorderPane {
     }
 
     private boolean isExportSessionSuspended(Bitmap bitmap) {
-        ExportSession exportSession = (ExportSession) bitmap.getProperty("exportSession");
-        JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
-        return exportEntry != null && exportEntry.getState() == ExportSessionState.SUSPENDED;
+        final ExportSession exportSession = (ExportSession) bitmap.getProperty("exportSession");
+        final JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
+        return exportEntry != null && exportEntry.state() == ExportSessionState.SUSPENDED;
     }
 
     private DefaultThreadFactory createThreadFactory(String name) {
@@ -143,7 +146,7 @@ public class JobsPane extends BorderPane {
     }
 
     private void updateButtons(List<Button> buttons, boolean disabled) {
-        buttons.stream().forEach(button -> button.setDisable(disabled));
+        buttons.forEach(button -> button.setDisable(disabled));
     }
 
     private Stream<Bitmap> selectedItems(ListView<Bitmap> jobsList) {
@@ -151,20 +154,20 @@ public class JobsPane extends BorderPane {
     }
 
     private int computePercentage(double percentage) {
-        return (int)Math.rint(Screen.getPrimary().getVisualBounds().getWidth() * percentage);
+        return (int) Math.rint(Screen.getPrimary().getVisualBounds().getWidth() * percentage);
     }
 
     private ImageView createIconImage(String name, double percentage) {
-        int size = computePercentage(percentage);
-        InputStream stream = getClass().getResourceAsStream(name);
+        final int size = computePercentage(percentage);
+        final InputStream stream = getClass().getResourceAsStream(name);
         if (stream != null) {
-            ImageView image = new ImageView(new Image(stream));
+            final ImageView image = new ImageView(new Image(stream));
             image.setSmooth(true);
             image.setFitWidth(size);
             image.setFitHeight(size);
             return image;
         } else {
-            ImageView image = new ImageView();
+            final ImageView image = new ImageView();
             image.setSmooth(true);
             image.setFitWidth(size);
             image.setFitHeight(size);
@@ -173,15 +176,15 @@ public class JobsPane extends BorderPane {
     }
 
     private void updateJobList(ListView<Bitmap> jobsList) {
-        ObservableList<Bitmap> bitmaps = jobsList.getItems();
+        final ObservableList<Bitmap> bitmaps = jobsList.getItems();
         for (int i = bitmaps.size() - 1; i >= 0; i--) {
-            Bitmap bitmap = bitmaps.get(i);
-            ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
-            JobEntry exportEntry = exportEntries.get(session.getSessionId());
+            final Bitmap bitmap = bitmaps.get(i);
+            final ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
+            final JobEntry exportEntry = exportEntries.get(session.getSessionId());
             if (exportEntry == null) {
                 bitmaps.remove(i);
             } else {
-                bitmap.setProgress(exportEntry.getProgress());
+                bitmap.setProgress(exportEntry.progress());
                 if (jobsList.getSelectionModel().isSelected(i)) {
                     triggerUpdate(jobsList, bitmap, i);
                     jobsList.getSelectionModel().select(i);
@@ -197,17 +200,17 @@ public class JobsPane extends BorderPane {
     }
 
     private void itemSelected(ListView<Bitmap> listView, Label sizeLabel, Label formatLabel, Label durationLabel) {
-        Bitmap bitmap = listView.getSelectionModel().getSelectedItem();
+        final Bitmap bitmap = listView.getSelectionModel().getSelectedItem();
         if (bitmap != null) {
-            ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
+            final ExportSession session = (ExportSession) bitmap.getProperty("exportSession");
             if (session.getFrameCount() <= 1) {
                 sizeLabel.setText(session.getFrameSize().width() + "\u00D7" + session.getFrameSize().height() + " pixels");
                 formatLabel.setText(session.getEncoder().getName() + " Image");
             } else {
                 sizeLabel.setText(session.getFrameSize().width() + "\u00D7" + session.getFrameSize().height() + " pixels");
                 formatLabel.setText(session.getEncoder().getName() + " Video");
-                long durationInSeconds = (long)Math.rint(session.getFrameCount() / (float) session.getFrameRate());
-                long minutes = (long)Math.rint(durationInSeconds / 60.0);
+                final long durationInSeconds = (long)Math.rint(session.getFrameCount() / (float) session.getFrameRate());
+                final long minutes = (long)Math.rint(durationInSeconds / 60.0);
                 if (minutes <= 2) {
                     durationLabel.setText("Duration " + durationInSeconds + " seconds");
                 } else {
@@ -231,15 +234,11 @@ public class JobsPane extends BorderPane {
     }
 
     private void addItem(ListView<Bitmap> listView, ExportSession session, IntBuffer pixels, Size size) {
-        BrowseBitmap bitmap = new BrowseBitmap(size.width(), size.height(), pixels);
-        JobEntry jobEntry = new JobEntry(session, ExportSessionState.READY, 0f, bitmap);
+        final BrowseBitmap bitmap = new BrowseBitmap(size.width(), size.height(), pixels);
+        final JobEntry jobEntry = new JobEntry(session, ExportSessionState.READY, 0f, bitmap);
         exportEntries.put(session.getSessionId(), jobEntry);
         bitmap.setProperty("exportSession", session);
         listView.getItems().addFirst(bitmap);
-    }
-
-    public void setDelegate(JobsDelegate delegate) {
-        this.delegate = delegate;
     }
 
     public void updateSessions() {
@@ -247,16 +246,16 @@ public class JobsPane extends BorderPane {
     }
 
     public void dispose() {
-        List<ExecutorService> executors = Arrays.asList(executor);
-        executors.forEach(executor -> executor.shutdownNow());
-        executors.forEach(executor -> await(executor));
+        final List<ExecutorService> executors = List.of(executor);
+        executors.forEach(ExecutorService::shutdownNow);
+        executors.forEach(this::await);
     }
 
     private void await(ExecutorService executor) {
         Command.of(() -> executor.awaitTermination(5000, TimeUnit.MILLISECONDS))
                 .execute()
                 .observe()
-                .onFailure(e -> logger.warning("Await termination timeout"))
+                .onFailure(e -> log.warning("Await termination timeout"))
                 .get();
     }
 
@@ -273,55 +272,27 @@ public class JobsPane extends BorderPane {
     }
 
     public void updateSession(ExportSession exportSession, ExportSessionState state, Float progress) {
-        JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
+        final JobEntry exportEntry = exportEntries.get(exportSession.getSessionId());
         if (exportEntry != null) {
-            JobEntry jobEntry = new JobEntry(exportSession, state, progress, exportEntry.getBitmap());
-            jobEntry.getBitmap().setProgress(exportEntry.getProgress());
-            int index = listView.getItems().indexOf(jobEntry.getBitmap());
+            final JobEntry jobEntry = new JobEntry(exportSession, state, progress, exportEntry.bitmap());
+            jobEntry.bitmap().setProgress(exportEntry.progress());
+            final int index = listView.getItems().indexOf(jobEntry.bitmap());
             if (listView.getSelectionModel().isSelected(index)) {
-                triggerUpdate(listView, jobEntry.getBitmap(), index);
+                triggerUpdate(listView, jobEntry.bitmap(), index);
                 listView.getSelectionModel().select(index);
             } else {
-                triggerUpdate(listView, jobEntry.getBitmap(),index);
+                triggerUpdate(listView, jobEntry.bitmap(),index);
             }
             exportEntries.put(exportSession.getSessionId(), jobEntry);
         }
     }
 
     public void removeSession(ExportSession exportSession) {
-        JobEntry exportEntry = exportEntries.remove(exportSession.getSessionId());
+        final JobEntry exportEntry = exportEntries.remove(exportSession.getSessionId());
         if (exportEntry != null) {
-            listView.getItems().remove(exportEntry.getBitmap());
+            listView.getItems().remove(exportEntry.bitmap());
         }
     }
 
-    private class JobEntry {
-        private ExportSession exportSession;
-        private ExportSessionState state;
-        private Float progress;
-        private Bitmap bitmap;
-
-        public JobEntry(ExportSession exportSession, ExportSessionState state, Float progress, Bitmap bitmap) {
-            this.exportSession = exportSession;
-            this.state = state;
-            this.progress = progress;
-            this.bitmap = bitmap;
-        }
-
-        public ExportSession getExportSession() {
-            return exportSession;
-        }
-
-        public ExportSessionState getState() {
-            return state;
-        }
-
-        public Float getProgress() {
-            return progress;
-        }
-
-        public Bitmap getBitmap() {
-            return bitmap;
-        }
-    }
+    private record JobEntry(ExportSession exportSession, ExportSessionState state, Float progress, Bitmap bitmap) {}
 }
